llvm/test/tools/llubi/intr_memory_constant_ub.ll
; NOTE: Assertions have been autogenerated by utils/update_llubi_test_checks.py UTC_ARGS: --version 6
; RUN: not llubi --verbose < %s 2>&1 | FileCheck %s

@constant_dst = constant [4 x i8] zeroinitializer

define void @main() {
  call void @llvm.memset.p0.i8(ptr @constant_dst, i8 0, i8 1, i1 false)
  ret void
}

; CHECK: Entering function: main
; CHECK-NEXT: Stacktrace:
; CHECK-NEXT: #0   call void @llvm.memset.p0.i8(ptr @constant_dst, i8 0, i8 1, i1 false) at @main
; CHECK-NEXT: Immediate UB detected: Try to write to a constant memory object: ptr 0x8 [@constant_dst].
; CHECK-NEXT: error: Execution of function 'main' failed.
